2007-06-17  Isaiah Beerbower <ipaqah@tm.net>
	* PQFontSampleView.m: Handles changing colors.
	* PQSampleController.m: Handles changing colors.

2007-06-17  Isaiah Beerbower <ipaqah@tm.net>
	* PQFontSampleView.*: Only generates font sample if it needs to.
	* PQSampleController.*: Remembers if fonts need updating or not.

2007-06-16  Isaiah Beerbower <ipaqah@tm.net>
	* PQFontSampleView.*: Added auto resize methods, and changed drawRect: to use
	  them.

2007-06-16  Isaiah Beerbower <ipaqah@tm.net>
	* PQFontSampleView.m: Some small changes.

2007-06-11  Isaiah Beerbower <ipaqah@tm.net>
	* PQFontSampleView.m ([-drawRect:]): Changed almost everything.

2007-06-07  Isaiah Beerbower <ipaqah@tm.net>
	* PQSampleController.m: Added method -updateControls, and call it from
		-awakeFromNib so controls will be updated on startup.

2007-06-07  Isaiah Beerbower <ipaqah@tm.net>
	* PQFontSampleView.*: Font sampling view to replace text view.
	* PQSampleController.m: Changed to use PQFontSampleView instead of a
	  text view.
	* GNUmakefile: Makefile for GNUstep.
	* English.lproj/MainMenu.gorm*: Interface for GNUstep.

2007-05-28  Isaiah Beerbower <ipaqah@tm.net>
	* PQSampleController.m: Implemented -updateSampleText.

2007-05-28  Isaiah Beerbower <ipaqah@tm.net>
	* PQSampleController.*: Replaced -update with -updateFonts, -updateSampleText,
	  & -updateSize.

2007-05-28  Isaiah Beerbower <ipaqah@tm.net>
	* PQController.m ([-outlineView:objectValueForTableColumn:byItem:]): Fixed
		possible range exception.

2007-05-27  Isaiah Beerbower <ipaqah@tm.net>
	* PQController.*: Added text field showing number of fonts.
	* English.lproj/MainMenu.nib/*:
	* PQSampleController.m: Fixed small problem with size combo box.

2007-05-26  Isaiah Beerbower <ipaqah@tm.net>
	* PQSampleController: Internal cleanup.

2007-05-26  Isaiah Beerbower <ipaqah@tm.net>
	* PQSampleController.m: Added to combo box datasource methods.
	* PQSampleController.h:
	* English.lproj/MainMenu.nib/*: Small amount of tweaking.