@@ -1,0 +1,13 @@
+===================
+Font Manager Readme
+===================
+
+:Maintainer: Isaiah Beerbower <ipaqah@tm.net>
+:Author: Isaiah Beerbower
+:License: Modified BSD license (see file COPYING)
+:Version: 0.1 alpha
+
+Font Manager is an app for the purpose of (guess what) managing fonts. It can
+currently show you your installed fonts and show samples of them. Planned
+features are disabling/enabling fonts and easy installation of fonts (including
+previewing of uninstalled fonts).
